# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  .travis.yml  Dockerfile  README.md  Vagrantfile  app.py  applogs.txt  deploy.sh  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  requirements.txt  run_prod.sh  session_items.py  setup.sh  terraform.tfvars  todo_item_class.py  travis.yml  trello_config.py  trello_items.py  variables.tf  view_model.py  wsgi.py
documentation/: Part 1 - Context Diagram.drawio  Part 2 - Container Diagram.drawio  Part 3 - Component Diagram.drawio
entity/: access_level.py  item.py  role.py  status.py  user.py
minikube/: configmap.yaml  deployment.yaml  secret.yaml.template
mongo_db/: db_queries.py  index.py
scripts/: StoreTfStateInAzureStorage.sh  deploy.sh
templates/: add_item.html  delete_item.html  edit_item.html  index.html  layout.html  read_item.html
tests/: test_app.py  test_app_e2e.py  test_view_model.py
tests_e2e/: test_app_e2e.py
tests_integration/: test_app_integration.py
