[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = ""
authors = ["Patrick Morris <pm141088@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = true